argocd/ytdl/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ytdl-app
  name: ytdl-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: YoutubeDL
    gethomepage.dev/icon: sh-youtube-dl
    gethomepage.dev/description: "YoutubeDL-Material is a Material Design frontend for youtube-dl."
    gethomepage.dev/pod-selector: io.kompose.service=ytdl
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - ytdl.yanello.net
  rules:
  - backendRefs:
    - name: ytdl
      port: 17442
